--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "type": "module",
   "main": "server.js",
  "scripts": {
-  "start": "node src/server.js",
-  "dev": "node src/server.js"
+  "start": "node server.js",
+  "dev": "node server.js"
+
 
 },
 
